--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="main_item_error_btn">Повторить</string>
     <string name="main_item_error_tv">Ошибка загрузки</string>
     <string name="main_city_default">Москва</string>
+    <string name="city_search_hint">Поиск города</string>
 
     <!-- Details screen -->
     <string name="details_btn_navigate_label">Проложить маршрут</string>
